--- a/app/views/layinghens/current/scoring/ramps.html
+++ b/app/views/layinghens/current/scoring/ramps.html
@@ -61,7 +61,7 @@
                 <span class="app-step-nav-related__pretitle">Funding priorities</span>
                 </h2>
                 <p>
-                    RPA want to fund multi-tier systems that incorporate ramps to reduce the risk of keel bone fractures.
+                    RPA want to fund multi-tier systems that have ramps to reduce the risk of keel bone fractures and benefit birds that have keel bone fractures.
                 </p>
             </div>
 
