Update to minimum grant flow

--- a/app/views/layinghens/current/eligibility/funding/elim-cost.html
+++ b/app/views/layinghens/current/eligibility/funding/elim-cost.html
@@ -61,7 +61,7 @@
                 </p>
 
                 <p>
-                    <a href='number-of-birds'>
+                    <a href="potential-funding">
                         I am applying for multiple building projects.
                     </a>
                 </p>
