Updates to content based on the changelog

--- a/app/views/layinghens/current/eligibility/common/poultry-type.html
+++ b/app/views/layinghens/current/eligibility/common/poultry-type.html
@@ -15,7 +15,7 @@
             {% set nextPage = '../building/items' %}
             {% if data['project-type'] == 'veranda' %}
 
-                {% set nextPage = '../veranda/veranda-only' %}
+                {% set nextPage = '../veranda/size' %}
 
             {% endif %}
 
