--- a/app/views/layinghens/current/eligibility/funding/elim-cost.html
+++ b/app/views/layinghens/current/eligibility/funding/elim-cost.html
@@ -48,7 +48,7 @@
                 {% if data['solar-pv-system'] == 'Yes' %}
 
                     {{ govukInsetText ({
-                        text: 'You cannot apply for funding for a solar PV system if you have requested the maximum funding amount for building project costs.'
+                        text: 'You cannot apply for funding for a solar PV system if you have not requested the minimum funding amount for individual building project costs.'
                     }) }}
 
                 {% endif %}
