--- a/app/views/layinghens/current/eligibility/veranda/size.html
+++ b/app/views/layinghens/current/eligibility/veranda/size.html
@@ -30,9 +30,9 @@
                     },
                     items: [
                         {
-                            text: '4 metres wide along the length of the bird housing area',
-                            value: '4 metres wide along the length of the bird housing area',
-                            checked: true if data['veranda-size'] == '4 metres wide along the length of the bird housing area',
+                            text: '4 metres wide or more along the length of the bird housing area',
+                            value: '4 metres wide or more along the length of the bird housing area',
+                            checked: true if data['veranda-size'] == '4 metres wide or more along the length of the bird housing area',
                             attributes: {
                                 'data-next': 'specification'
                             }
@@ -80,7 +80,7 @@
 
                 <ul class="govuk-list govuk-list--bullet">
                     <li>
-                        4 metres wide along the length of the bird housing area
+                        4 metres wide or more along the length of the bird housing area
                     </li>
                     <li>
                         30% or more of the size of the indoor bird housing area footprint
