--- a/app/views/layinghens/current/eligibility/veranda/specification.html
+++ b/app/views/layinghens/current/eligibility/veranda/specification.html
@@ -25,13 +25,13 @@
 
                     <ul class="govuk-hint govuk-list govuk-list--bullet">
                         <li>
-                            a solid concrete floor
+                            solid concrete floor
                         </li>
                         <li>
-                            a waterproof insulated roof
+                            waterproof insulated roof
                         </li>
                         <li>
-                            a perimeter wall at least 1 metre high
+                            perimeter wall at least 1 metre high
                         </li>
                         <li>
                             dimmable LED lighting system between 0 lux and 60 lux
