--- a/app/views/layinghens/current/eligibility/veranda/elim-size.html
+++ b/app/views/layinghens/current/eligibility/veranda/elim-size.html
@@ -18,7 +18,7 @@
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
-                    4 metres wide along the length of the bird housing area
+                    4 metres wide or more along the length of the bird housing area
                 </li>
                 <li>
                     30% or more of the size of the indoor bird housing area footprint
