--- a/app/views/layinghens/current/eligibility/funding/cost.html
+++ b/app/views/layinghens/current/eligibility/funding/cost.html
@@ -14,7 +14,16 @@
     What is the total estimated cost of {{ projectDescriptor }} the building?
 {% endblock %}
 
+{% set shouldEliminate = false %}
+{% if data['roof-support-for-solar-pv'] == 'No' and 'None' | isIn(data['solar-exemptions']) %}
+    {% set shouldEliminate = true %}
+{% endif %}
+
 {% block content %}
+
+{% if shouldEliminate %}
+    {{ 'elim-roof-support-for-solar-pv' | redirect | safe }}
+{% endif %}
 
 <div class="govuk-grid-row">
 
