--- a/app/views/layinghens/current/eligibility/solar/exemptions.html
+++ b/app/views/layinghens/current/eligibility/solar/exemptions.html
@@ -15,7 +15,7 @@
 
         <div class="govuk-grid-column-two-thirds">
 
-            <form action="solar-pv-system">
+            <form action="../funding/cost">
 
                 {% set hintHtml %}
 
