current system redirect and log changes 119 - 125

--- a/app/views/layinghens/current/eligibility/aviary/welfare.html
+++ b/app/views/layinghens/current/eligibility/aviary/welfare.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Will the building have a high welfare aviary housing system?
+    Will the building have a high welfare aviary system?
 {% endblock %}
 
 {% block content %}
@@ -23,7 +23,7 @@
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will the building have a high welfare aviary housing system?',
+                            text: 'Will the building have a high welfare aviary system?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
@@ -71,7 +71,7 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    The building must have a high welfare aviary housing system.
+                    The building must have a high welfare aviary system.
                 </p>
                 <p>
                     The aviary system must have welfare ramps and platforms if the hens would need to jump or fly more than one metre in height to move between levels.
