--- a/app/views/layinghens/current/eligibility/common/poultry-type.html
+++ b/app/views/layinghens/current/eligibility/common/poultry-type.html
@@ -12,7 +12,7 @@
 
             <form method="post">
 
-            {% set nextPage = '../building/items' %}
+            {% set nextPage = 'one-thousand-birds' %}
             {% if data['project-type'] == 'veranda' %}
 
                 {% set nextPage = '../veranda/veranda-only' %}
