--- a/app/views/layinghens/current/eligibility/common/project-type.html
+++ b/app/views/layinghens/current/eligibility/common/project-type.html
@@ -15,11 +15,11 @@
                 {% set hintHtml %}
 
                     <p class="govuk-hint">
-                        You must submit an application for each house or veranda project. 
+                        You must submit an application for each building or veranda project.  
                     </p>
 
                     <p class="govuk-hint">
-                        The maximum total grant amount each business can apply for is £500,000 for housing projects, or £100,000 for veranda projects.
+                        The maximum total grant amount each business can apply for is £500,000 for building projects, or £100,000 for veranda projects.
                     </p>
 
                 {% endset %}
