--- a/app/views/layinghens/current/eligibility/building/elim-lighting.html
+++ b/app/views/layinghens/current/eligibility/building/elim-lighting.html
@@ -4,6 +4,11 @@
     You cannot apply for a grant from this scheme - House lighting system features
 {% endblock %}
 
+{% set poultryType = 'hen' %}
+{% if data['poultry-type'] %}
+    {% set poultryType = data['poultry-type'] %}
+{% endif %} 
+
 {% block content %}
 
 <div class="govuk-grid-row">
@@ -20,19 +25,24 @@
 
               <ul class="govuk-list govuk-list--bullet">
                     <li>
-                        non-flicker LED light with a colour temperature between 2700 and 4000 Kelvin   
+                        non-flicker LED light with a colour temperature between 2700 and 4000 Kelvin
                     </li>
                     <li>
-                        capacity for zonal dimming between 0 and 60 lux  
+                        capacity for zonal dimming between 0 and 60 lux
                     </li>
                     <li>
-                        coverage of the entire floor-litter (scratch) area  
+                        coverage of the entire floor-litter (scratch) area
                     </li>
                     <li>
-                        a simulated stepped dawn and dusk (unless this is already provided as part of an aviary lighting system)  
+                        a simulated stepped dawn and dusk 
+                        
+                        {% if poultryType == 'hen' %}
+                            (unless this is already provided as part of an aviary lighting system)
+                        {% endif %}
+
                     </li>
                     <li>
-                        an option for red light 
+                        an option for red light
                     </li>
                 </ul>
 
