--- a/app/views/layinghens/current/eligibility/common/elim-one-thousand-birds.html
+++ b/app/views/layinghens/current/eligibility/common/elim-one-thousand-birds.html
@@ -4,6 +4,16 @@
     You cannot apply for a grant from this scheme - One thousand birds
 {% endblock %}
 
+{% set poultryType = 'hen' %}
+{% if data['poultry-type'] %}
+    {% set poultryType = data['poultry-type'] %}
+{% endif %}
+
+{% set poultryDescriptor = 'laying hens' %}
+{% if poultryType != 'hen' %}
+    {% set poultryDescriptor = 'pullets' %}
+{% endif %}
+
 {% block content %}
 
 <div class="govuk-grid-row">
@@ -15,7 +25,7 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    You must have at least 1,000 birds on your farm currently.
+                    You must have at least 1,000 {{ poultryDescriptor }} on your farm currently.
                 </p>
 
                 <p>
