--- a/app/views/layinghens/current/scoring/current-multi-tier-system.html
+++ b/app/views/layinghens/current/scoring/current-multi-tier-system.html
@@ -16,6 +16,12 @@
 
 {% block content %}
 
+    {% set currentSystem = data['scoring-system'] %}
+
+    {% if currentSystem == 'Colony cage' %}
+        {{ 'ramps' | redirect | safe }}
+    {% endif %}
+
 <div class="govuk-grid-row">
 
         <div class="govuk-grid-column-two-thirds">
