updated to interruption pages

--- a/app/views/layinghens/current/scoring/results.html
+++ b/app/views/layinghens/current/scoring/results.html
@@ -462,7 +462,7 @@
 
             {{ govukButton ({
                 text: 'Continue',
-                href: '../details/interruption'
+                href: '../details/business-details'
             }) }}
 
         </div>
