--- a/app/views/layinghens/current/scoring/energy.html
+++ b/app/views/layinghens/current/scoring/energy.html
@@ -87,7 +87,10 @@
                         {
                             text: 'None of the above',
                             value: 'No renewable energy use',
-                            checked: true if 'No renewable energy use' | isIn(data['scoring-energy'])
+                            checked: true if 'No renewable energy use' | isIn(data['scoring-energy']),
+                            attributes: {
+                                'data-behavior': 'exclusive'
+                            }
                         }
                     ]
                 }) }}
