--- a/app/views/layinghens/current/scoring/interruption.html
+++ b/app/views/layinghens/current/scoring/interruption.html
@@ -6,14 +6,12 @@
 
 {% block content %}
 
-<div class="app-blue-card">
-
     <div class="govuk-grid-row">
 
             <div class="govuk-grid-column-two-thirds">
 
                 <h1 class="govuk-heading-l">
-                    2. Check how well your project meets our funding priorities
+                    Your project meets the minimum criteria to apply for this grant
                 </h1>
 
                 <p>
@@ -21,27 +19,28 @@
                 </p>
 
                 <p>
-                    This section will check how well your project meets the funding priorities. Your answers past this point will not stop you from applying.
+                    You will now be asked questions that will check how well your project meets the funding priorities.
                 </p>
+
+                {{ govukInsetText ({
+                    text: 'Your answers past this point will not stop you from applying.'
+                }) }}
 
                 <h2 class="govuk-heading-m">
                     Scoring
                 </h2>
 
                 <p>
-                    At the end of this section, your project will be given a score. You can then make changes to see how you could make your application better.
+                    At the end of these questions, your project will be given a score. You can then make changes to see how you could make your application better.
                 </p>
                 
                 {{ govukButton ({
                     text: 'Continue',
-                    href: 'current-system',
-                    classes: 'govuk-button--inverse'
+                    href: 'current-system'
                 }) }}
 
             </div>
 
     </div>
-
-</div>
 
 {% endblock %}
