hotfix for solar

--- a/app/views/layinghens/current/eligibility/solar/solar-pv-system.html
+++ b/app/views/layinghens/current/eligibility/solar/solar-pv-system.html
@@ -4,6 +4,8 @@
     Will you buy a solar PV system with this grant?
 {% endblock %}
 
+{% block content %}
+
 <div class="govuk-grid-row">
 
         <div class="govuk-grid-column-two-thirds">
