Updates to content based on changelog

--- a/app/views/layinghens/current/eligibility/biosecurity/changing-area.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/changing-area.html
@@ -61,7 +61,7 @@
                             value: 'Yes',
                             checked: true if data['changing-area'] == 'Yes',
                             attributes: {
-                                    'data-next': 'concrete-apron'
+                                    'data-next': 'vehicle-washing-area'
                                 }
                         },
                         {
