--- a/app/views/layinghens/current/eligibility/biosecurity/vaccination-lobby.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/vaccination-lobby.html
@@ -20,7 +20,6 @@
                 {{ govukRadios ({
                     idPrefix: 'vaccination-lobby',
                     name: 'vaccination-lobby',
-                    classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
                             text: 'Will there be a designated vaccination lobby with internal and external access?',
@@ -47,6 +46,17 @@
                             attributes: {
                                     'data-next': 'elim-vaccination-lobby'
                                 }
+                        },
+                        {
+                            divider: 'or'
+                        },
+                        {
+                            text: 'No, I am rearing organic pullets',
+                            value: 'No, I am rearing organic pullets',
+                            checked: true if data['vaccination-lobby'] == 'No, I am rearing organic pullets',
+                            attributes: {
+                                    'data-next': 'changing-area'
+                                }
                         }
                     ]
                 }) }}
@@ -66,7 +76,10 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    The building must have a dedicated area to perform pullet vaccinations, with access to the loading bay.
+                    The building must have a dedicated area to perform pullet vaccinations, with access to the loading bay. 
+                </p>
+                <p>
+                    If you are rearing organic pullets, you are exempt from adding a vaccination lobby.
                 </p>
             </div>
 
