--- a/app/views/layinghens/current/eligibility/common/one-thousand-birds.html
+++ b/app/views/layinghens/current/eligibility/common/one-thousand-birds.html
@@ -47,7 +47,7 @@
                             value: 'Yes',
                             checked: true if data['one-thousand-birds'] == 'Yes',
                             attributes: {
-                                'data-next': 'l../building/items'
+                                'data-next': '../building/items'
                             }
                         },
                         {
