--- a/app/views/layinghens/current/eligibility/common/project-type.html
+++ b/app/views/layinghens/current/eligibility/common/project-type.html
@@ -19,7 +19,7 @@
                     </p>
 
                     <p class="govuk-hint">
-                        The maximum total grant amount each business can apply for is £500,000 for building projects, or £100,000 for veranda projects.
+                        The maximum grant funding each business can apply for is £500,000 for building projects, or £100,000 for veranda projects.
                     </p>
 
                 {% endset %}
