--- a/app/views/layinghens/current/eligibility/funding/energy-output.html
+++ b/app/views/layinghens/current/eligibility/funding/energy-output.html
@@ -1,7 +1,7 @@
 {% extends 'layinghens/current/views/layouts/layout.html' %}
 
 {% block pageTitle %}
-    How much energy will your solar PV system produce?
+    What is the power capacity of the solar PV system?
 {% endblock %}
 
 {% block content %}
@@ -13,21 +13,21 @@
             <form action="potential-funding-solar">
 
                 <h1 class="govuk-heading-l">
-                    How much energy will your solar PV system produce?
+                    What is the power capacity of the solar PV system?
                 </h1>
 
                 <p class="govuk-hint">
-                    This grant will fund a solar PV system that produces up to 5kW kilowatts (kW) of energy per 1,000 birds.
+                    This grant will fund a solar PV system that has a power capacity of up to 5kW per 1,000 birds
                 </p>
 
                 <p class="govuk-hint">
-                    You can install a solar PV system that produces more than 5kW of energy per 1,000 birds. You must fund the extra solar PV system costs above the output capacity of 5kW per 1,000 birds.
+                    You can install a solar PV system that has a power capacity of more than 5kW of energy per 1,000 birds. You must fund the remaining solar PV system costs above the power capacity of 5kW per 1,000 birds.
                 </p>
 
                 {% set hintHtml %}
 
                     <p class="govuk-hint">
-                        Enter estimated power rating, for example 10
+                        Enter estimated power capacity, for example 10
                     </p>
 
                 {% endset %}
