--- a/app/views/layinghens/current/eligibility/funding/solar-cost.html
+++ b/app/views/layinghens/current/eligibility/funding/solar-cost.html
@@ -17,15 +17,15 @@
                 </h1>
 
                 <p class="govuk-hint">
-                    You can apply for up to 25% of the estimated costs of buying and installing a solar PV system which produces up to 5kW in energy output per 1,000 birds.
+                    You can apply for up to 25% of the estimated costs of buying and installing a solar PV system which has a power capacity of up to 5kW per 1,000 bird
                 </p>
 
                 <p class="govuk-hint">
-                    The maximum combined housing and solar PV system grant funding you can apply for is £500,000.
+                    The maximum grant funding each business can apply for is £500,000 for building and solar PV system costs combined.
                 </p>
 
                 <p class='govuk-hint'>
-                    Enter estimated amount, for example 300,000
+                    Enter estimated amount, for example 200,000
                 </p>
 
                 {{ govukInput ({
